[gd_scene load_steps=2 format=3 uid="uid://3lqciojvno6a"]

[ext_resource type="Script" uid="uid://ddjxdd1gkn5gw" path="res://scenes/lobby.gd" id="1_o1atq"]

[node name="Control" type="Control"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 300.0
script = ExtResource("1_o1atq")

[node name="MainWindow" type="Window" parent="."]
auto_translate_mode = 1
initial_position = 1
size = Vector2i(400, 300)

[node name="Host" type="Button" parent="MainWindow"]
offset_left = 160.0
offset_top = 90.0
offset_right = 229.0
offset_bottom = 133.0
text = "Host"

[node name="Join" type="Button" parent="MainWindow"]
offset_left = 160.0
offset_top = 160.0
offset_right = 229.0
offset_bottom = 203.0
text = "Join"

[node name="LobbyWindow" type="Window" parent="."]
initial_position = 1
size = Vector2i(400, 300)

[node name="PlayersLabel" type="Label" parent="LobbyWindow"]
offset_left = 91.0
offset_top = 53.0
offset_right = 313.0
offset_bottom = 130.0
text = "Jugadores conectados:"

[node name="ConfigLabel" type="Label" parent="LobbyWindow"]
offset_left = 91.0
offset_top = 107.0
offset_right = 307.0
offset_bottom = 202.0
text = "Configuracion de partida:"

[node name="StartButton" type="Button" parent="LobbyWindow"]
offset_left = 145.0
offset_top = 216.0
offset_right = 234.0
offset_bottom = 267.0
text = "Comenzar"

[connection signal="pressed" from="MainWindow/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainWindow/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="LobbyWindow/StartButton" to="." method="_on_start_pressed"]
